# whisper_cpp_gui

./: .gitignore  CLAUDE.md  README.md  README_ko.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: history_service.rs  mod.rs  whisper_installer.rs  whisper_service.rs
src-tauri/src/utils/: mod.rs
src/components/: Dashboard.tsx  DeleteModelModal.tsx  Export.tsx  Header.tsx  LanguageSelector.tsx  Layout.tsx  Management.tsx  OptionsForm.tsx  Output.tsx  Setup.tsx  Sidebar.tsx  Transcription.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  ko.json
src/services/: api.ts
src/store/: index.ts
