[package]
name = "whisper-gui"
version = "0.1.0"
description = "Whisper.cpp GUI Application"
authors = ["you"]
license = ""
repository = ""
default-run = "whisper-gui"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "dialog-open", "shell-sidecar", "shell-open", "shell-execute", "path-all", "fs-all", "dialog-save"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
